--- a/docs/locales/zh_CN/LC_MESSAGES/SECURITY.po
+++ b/docs/locales/zh_CN/LC_MESSAGES/SECURITY.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: sphinx demo \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-11 17:25+0800\n"
+"POT-Creation-Date: 2021-12-11 17:35+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -30,8 +30,7 @@ msgstr "所支持的版本"
 msgid ""
 "Use this section to tell people about which versions of your project are "
 "currently being supported with security updates."
-msgstr ""
-"使用这部分来告诉人们你的项目的哪些版本目前得到了安全更新的支持。"
+msgstr "使用这部分来告诉人们你的项目的哪些版本目前得到了安全更新的支持。"
 
 #: ../../SECURITY.md:1
 msgid "Version"
@@ -39,14 +38,14 @@ msgstr "版本"
 
 #: ../../SECURITY.md:1
 msgid "Supported"
-msgstr "受支持"
+msgstr "支持"
 
 #: ../../SECURITY.md:1
 msgid "5.1.x"
 msgstr ""
 
 #: ../../SECURITY.md:1
-msgid ":white_check_mark:"
+msgid "✅"
 msgstr ""
 
 #: ../../SECURITY.md:1
@@ -54,7 +53,7 @@ msgid "5.0.x"
 msgstr ""
 
 #: ../../SECURITY.md:1
-msgid ":x:"
+msgid "❌"
 msgstr ""
 
 #: ../../SECURITY.md:1
@@ -78,5 +77,4 @@ msgid ""
 "Tell them where to go, how often they can expect to get an update on a "
 "reported vulnerability, what to expect if the vulnerability is accepted "
 "or declined, etc."
-msgstr ""
-"告诉他们到哪里去，多长时间可以得到一个报告的漏洞的更新，如果漏洞被接受或被拒绝，该怎么做，等等。"
+msgstr "告诉他们到哪里去，多长时间可以得到一个报告的漏洞的更新，如果漏洞被接受或被拒绝，该怎么做，等等。"
